# Hyperkit-Agent

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTION.md  DEVLOG_CODE_ANALYSIS.md  LICENSE.md  README.md  SECURITY.md  TECH_STACK_POLICY.md  config.yaml  package.json  requirements.txt  setup.py
hyperkit-agent/: .gitignore  =0.12.0  BRUTAL_REALITY_CHECK_COMPLETE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  COMPLETION_SUMMARY_FINAL.md  DECISION_MATRIX.md  Dockerfile.api  Dockerfile.mcp  Dockerfile.worker  EMERGENCY_RESPONSE.md  ENVIRONMENT_SETUP.md  FINAL_DELIVERY_REPORT.md  IMPLEMENTATION_STATUS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_STRUCTURE_FINAL.md  README.md  REALITY_CHECK_RESULTS.md  SECURITY.md  SECURITY_AUDIT_LOG.md  TODO.md  cli.py  config.yaml  docker-compose.yml  env.example  foundry.toml  hyperagent  main.py  mcp_server.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-mcp.txt  requirements-optional.txt  requirements.txt  security_report.json  setup.py  setup_mcp_docker.py  (+5 more)
hyperkit-agent/.changeset/: changeset-integration.md  config.json  cool-cups-invite.md  file-organization-improvements.md  initial-release.md
hyperkit-agent/.github/: PRODUCTION_CHECKS.md  pull_request_template.md
hyperkit-agent/.workflow_contexts/: 00174741.json  0d8a5027.json  0d8a5027_diagnostics.json  0e4287f7.json  0e4287f7_diagnostics.json  1d70515d_diagnostics.json  20512ce2.json  20512ce2_diagnostics.json  3a53e856.json  3a53e856_diagnostics.json  3c0529a7.json  3c0529a7_diagnostics.json  3f7b3d20.json  3f7b3d20_diagnostics.json  4bae3dcd.json  4d0be669.json  4d0be669_diagnostics.json  4d26ccd8.json  4d26ccd8_diagnostics.json  5107414d.json  5107414d_diagnostics.json  53552ec3.json  53552ec3_diagnostics.json  59b7a418.json  59b7a418_diagnostics.json  6111785e_diagnostics.json  63361576.json  63361576_diagnostics.json  6757a277.json  6757a277_diagnostics.json  6763e185.json  6763e185_diagnostics.json  6ddc588f.json  6ddc588f_diagnostics.json  6e2cfea8.json  6e2cfea8_diagnostics.json  773eaeed.json  773eaeed_diagnostics.json  786489c5.json  786489c5_diagnostics.json  (+32 more)
hyperkit-agent/REPORTS/: ALL_TODOS_COMPLETE.md  AUDIT_ACCURACY_ENHANCEMENT_REPORT.md  AUDIT_REPORT_OUTDATED_FILES_2025-10-29.md  BRUTAL_REALITY_CHECK_COMPLETE.md  BRUTAL_TESTING_RESULTS.md  CICD_COMPLETE_FIX.md  CODEBASE_ANALYSIS_REPORT.md  COMPLETION_SUMMARY.md  COMPLETION_SUMMARY_FINAL.md  COMPREHENSIVE_AUDIT_RESPONSE.md  CORE_SYSTEM_INTEGRATION.md  CRITICAL_FIXES_ACTION_PLAN.md  CRITICAL_FIXES_SUMMARY.md  DIRECTORY_RESTRUCTURE_PLAN.md  E2E_WORKFLOW_FIX_RESULTS.md  FINAL_COMPLETION_REPORT.md  FINAL_CRITICAL_FIXES_REPORT.md  FINAL_IMPLEMENTATION_STATUS.md  FOUNDRY_INTEGRATION_REPORT.md  FREE_MODELS_SUMMARY.md  GEMINI_GLOBAL_PRIMARY.md  HONEST_STATUS_ASSESSMENT.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SESSION_2025-10-27.md  IPFS_RAG_BEST_PRACTICES.md  IPFS_RAG_FINAL_ASSESSMENT.md  IPFS_RAG_GUIDE.md  IPFS_RAG_SUCCESS.md  LAUNCH_MATERIALS.md  MARKDOWN_FIX_TRUTH_CHECK.md  MISSION_ACCOMPLISHED.md  MODEL_SELECTION_IMPLEMENTATION.md  NEW_PROVIDERS_SUMMARY.md  P1_DEPLOY_FIX_COMPLETE.md  P1_DEPLOY_FIX_PLAN.md  P1_DEPLOY_FIX_PROGRESS.md  PARALLEL_RUNNER_REPORT.md  PIPELINESTAGE_SCOPE_FIX.md  PRODUCTION_READINESS_COMPLETE.md  (+18 more)
hyperkit-agent/api/: hyperkit_api.py
hyperkit-agent/backend/: README.md
hyperkit-agent/blockchain/: foundry.toml
hyperkit-agent/cli/: __init__.py  main.py
hyperkit-agent/contracts/: ContractGenerationPrompts.sol  CreateERC20Token.sol  CrossChainToken.sol  GAMEX.sol  GamingToken.sol  HyperToken.sol  LendingBorrowingProtocol.sol  MyERC20Token.sol  RAGConteToken.sol  SimpleERC20Token.sol  TwoOfThreeMultisigWallet.sol
hyperkit-agent/core/: errors.py  handlers.py  intent_router.py  security.py
hyperkit-agent/docs/: ALITH_SDK_INTEGRATION_ROADMAP.md  API_REFERENCE.md  CLI_COMMANDS_REFERENCE.md  CONTRIBUTOR_GUIDE_FIXES.md  CPOO_INTEGRATION_GUIDE.md  DEVLOG_BRANCH_STRATEGY.md  DEVLOG_SETUP_COMPLETE.md  DISASTER_RECOVERY.md  EMERGENCY_RESPONSE.md  EXTERNAL_MONITORING.md  GENERATED_FILES.md  GITHUB_SETUP.md  HONEST_STATUS.md  INTEGRATOR_GUIDE.md  IPFS_RAG_SUMMARY.md  ISSUE_ASSESSMENT_AND_FIXES.md  MYTHRIL_WINDOWS_INSTALLATION.md  OBSIDIAN_RAG_SETUP_GUIDE.md  PRODUCTION_MODE.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  SAMPLE_INTEGRATION_SCRIPTS.md  SCREENSHOT_PLAN.md  SCRIPTS_DIRECTORY_COMPARISON.md  SECURITY_AUDIT_LOG.md  SECURITY_SETUP.md  TECHNICAL_DOCUMENTATION.md  TROUBLESHOOTING_GUIDE.md
hyperkit-agent/scripts/: README.md  audit_badge_system.py  cleanup_legacy_files.sh  cleanup_mock_integrations.py  cli_command_inventory.py  debug_deployment_error.py  doc_drift_cleanup.py  doctor.py  doctor.sh  emergency_patch.sh  fix_pydantic_validators.py  focused_todo_to_issues_conversion.py  install_precommit.py  integration_sdk_audit.py  legacy_file_inventory.py  mythril_wrapper.py  security_scan.py  setup_rag_vectors.py  setup_security_extensions.py  update_version_in_docs.py  (+2 more)
(+741 files in other folders)
